syntax = "proto3";

import "google/protobuf/wrappers.proto";

package ru.store.store_user;

// OBJECTS

enum Status {
  OK = 0;
  BAD = 1;
  ERROR = 2;
}

message Error {
  string class = 1;
  string message = 2;
}

message User {
  google.protobuf.StringValue login = 1;
  google.protobuf.StringValue password = 2;
  repeated google.protobuf.StringValue roles = 3;
}

// REQUEST

message UserRequest {
  User user = 1;
}

// RESPONSE

message UserResponse {
  Status status = 1;
  Error error = 2;
  User user = 3;
}

// SERVICE

service UserService {
  rpc saveUser(User) returns (UserResponse);
  rpc getUserByLogin(User) returns (UserResponse);
  rpc delete(User) returns (UserResponse);
}